--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>GRoT&gt; - Graficzny Rozwiązywacz Tarcz by tutajrobert</title>
+    <title>GRoT&gt; - Graficzny Rozwiązywacz Tarcz</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,47 +15,86 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>GRoT&gt; - Graficzny Rozwiązywacz Tarcz</h1>
-        <p>Linear finite element method solver, pre and postprocessor for constant strain square plane elements model obtained from bitmap file</p>
+        <h2>GRoT&gt; - Graficzny Rozwiązywacz Tarcz</h2>
+        <p>Przedprocesor, solwer i postprocesor dla liniowych obliczeń metodą elementów skończonych modeli w płaskim stanie naprężenia generowanych z map bitowych.</p>
 
-        <p class="view"><a href="https://github.com/tutajrobert/grot">View the Project on GitHub <small>tutajrobert/grot</small></a></p>
-
-
+        <p class="view"><a href="https://github.com/tutajrobert/grot">Zobacz stronę projektu w GitHub: <code>tutajrobert/grot</code></a></p>
+        <p class="view"><a href="mailto:tutajrobert@gmail.com">Skontaktuj się z autorem: <code>tutajrobert@gmail.com</code></a></p>
         <ul>
-          <li><a href="https://github.com/tutajrobert/grot/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/tutajrobert/grot/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/tutajrobert/grot">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/tutajrobert/grot/zipball/master">Download <strong>ZIP</strong></a></li>
+          <li><a href="https://github.com/tutajrobert/grot/tarball/master">Download <strong>TAR</strong></a></li>
+          <li><a href="https://github.com/tutajrobert/grot">Zobacz w <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="o-programie" class="anchor" href="#o-programie" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>1. O programie</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>Graficzny Rozwiązywacz Tarcz jest domowym programem wykorzystującym metodę elementów skończonych dla liniowych obliczeń wytrzymałościowych w płaskim stanie naprężeń lub odkształceń. Jego unikatową funkcją jest wprowadzenie geometrii modelu obliczeniowego 
+bezpośrednio z obrazka zapisanego jako mapa bitowa, a przygotowanego w dowolnym programie graficznym. Zastosowanym elementem skończonym jest czterowęzłowy kwadrat o liniowych funkcjach kształtu.</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="instalacja" class="anchor" href="#instalacja" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2. Instalacja</h3>
+<p>Graficzny Rozwiązywacz Tarcz wymaga posiadania zainstalowanego <b>pythona w wersji co najmniej 3.5.x</b>. Dodatkowo, niezbędne są następujące biblioteki: numpy, matplotlib oraz PIL.</p>
+<p><b>Dla systemu Windows:</b><br>
+1. Pobierz i zainstaluj pakiet Anaconda pythona 3 z <a href="https://www.continuum.io/downloads">continuum.io</a>, który zawiera niezbędne biblioteki.<br>
+2. Pobierz GRoT korzystając z którejś z paczek archiwów z GitHub i rozpakuj w wybranej lokalizacji.</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p><b>Dla systemu Linux:</b><br>
+1. Zainstaluj niezbędne biblioteki: python3-numpy, python3-matplotlib oraz python3-PIL (lub python3-pillow).<br>
+2. Pobierz GRoT korzystając z którejś z paczek archiwów z GitHub i rozpakuj w wybranej lokalizacji.
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="instrukcja" class="anchor" href="#instrukcja" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>3. Instrukcja</h3>
+<p>Wykonanie analizy obliczeniowej wymaga użycia różnych programów pomocniczych. Przygotowanie geometrii odbywa się w prostym programie graficznym (np. Paint, Tux Paint, mtPaint). Ustawienia analizy i warunki brzegowe opisane są w bardzo krótkim pliku tekstowym, który
+można edytować w dowolnym edytorze tekstu (np. Notatnik, Notepad++). Uruchomienie procedury obliczeniowej wykonywane jest jako pojedyczne polecenie pythona. Rezultatem są pliki graficzne w formacie png zapisane w katalogu projektu.</p>
+<p><h4>3.1. Skrócony poradnik jak zacząć</h4>
+Przejdź w konsoli poleceń do katalogu z plikami programu i rozpocznij obliczenia poleceniem:<br><center> <code>python run.py</code> lub <code>python3 run.py</code>.</center></p>
+<p><h4>3.2. Przygotowywanie map bitowych</h4></p>
+<p>Szerszy opis przygotowania modelu dostępny jest pod tym łączem <a href="bitmap.html">Klik!</a>
+</p>
+<p>Geometrię wejściową przygotowuję się jako plik graficzny <code>bmp</code>, w którym jeden piksel odpowiada jednemu kwadratowemu elementowi skończonemu. Zastosowanie odpowiednich kolorów umożliwia odczytanie zapisanej mapy bitowej jako modelu obliczeniowego, do którego
+zostały przypisane odpowiednie warunki brzegowe. Kolory mogą być wybierane dowolnie, zgodnie z instrukcją poniżej. Program jest w stanie rozpoznać zastosowane kolory, dlatego nie jest wymagane użycie odpowiednich barw z określonej palety.<br><br>
+<b>Opis kolorów:</b><br>
+Cyjan, jasnoniebieski, turkus - ciało modelu, elementy skończone<br>
+Biały - brak modelu, elementów skończonych w tym miejscu<br>
+Czerwony, pomarańczowy - utwierdzenie elementu w kierunku poziomym<br>
+Zielony, jasnozielony - utwierdzenie elementu w kierunku pionowym<br>
+Niebieski, granatowy - utwierdzenie elementu w obu kierunkach<br>
+Magenta, fiolet, ciemny róż - obciążeniowy warunek brzegowy<br>
+Brązowy, jasnobrązowy - obciążeniowy warunek brzegowy<br>
+Czarny - obciążeniowy warunek brzegowy<br>
+Żółty - lepiej nie używać, sprawia kłopoty z rozpoznaniem</p>
 
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p><h4>3.3. Plik wejściowy</h4></p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="przyklady" class="anchor" href="#przyklady" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>4. Przykłady</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/tutajrobert">tutajrobert</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+<p>Nie ma zatem takiego człowieka, który kocha cierpienie samo w sobie, kto by do niego dążył lub chciał go doświadczyć tylko dlatego, że jest to cierpienie, a dlatego, że czasami zdarzają się takie okoliczności, w których to cierpienie może doprowadzić go do jakiejś wielkiej przyjemności. Dając przykład banalny: któż z nas kiedyś nie podejmował się trudnego wysiłku fizycznego, mając na względzie uzyskanie z tego korzyści?</p>
+
+<h3>
+<a id="teoria" class="anchor" href="#teoria" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>5. Możliwości</h3>
+
+<p>Nie ma zatem takiego człowieka, który kocha cierpienie samo w sobie, kto by do niego dążył lub chciał go doświadczyć tylko dlatego, że jest to cierpienie, a dlatego, że czasami zdarzają się takie okoliczności, w których to cierpienie może doprowadzić go do jakiejś wielkiej przyjemności. Dając przykład banalny: któż z nas kiedyś nie podejmował się trudnego wysiłku fizycznego, mając na względzie uzyskanie z tego korzyści?</p>
+
+<h3>
+<a id="teoria" class="anchor" href="#teoria" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>6. Teoria</h3>
+
+<p>Nie ma zatem takiego człowieka, który kocha cierpienie samo w sobie, kto by do niego dążył lub chciał go doświadczyć tylko dlatego, że jest to cierpienie, a dlatego, że czasami zdarzają się takie okoliczności, w których to cierpienie może doprowadzić go do jakiejś wielkiej przyjemności. Dając przykład banalny: któż z nas kiedyś nie podejmował się trudnego wysiłku fizycznego, mając na względzie uzyskanie z tego korzyści?</p>
+
+<h3>
+<a id="autor" class="anchor" href="#autor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>7. Autor</h3>
+
+<p>Nie ma zatem takiego człowieka, który kocha cierpienie samo w sobie, kto by do niego dążył lub chciał go doświadczyć tylko dlatego, że jest to cierpienie, a dlatego, że czasami zdarzają się takie okoliczności, w których to cierpienie może doprowadzić go do jakiejś wielkiej przyjemności. Dając przykład banalny: któż z nas kiedyś nie podejmował się trudnego wysiłku fizycznego, mając na względzie uzyskanie z tego korzyści?</p>
+
+      </section>  
+	  
+	  
+	  
+	  <footer>
+        <p>Projekt prowadzony przez <a href="https://github.com/tutajrobert">tutajrobert</a></p>
+        <p><small>Gospodarzem strony GitHub Pages<br>Motyw utworzony przez <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
