--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <body>
     <div class="wrapper">
       <header>
-        <h2>GRoT&gt; - Graficzny Rozwiązywacz Tarcz</h2>
+	    <p><img src="logo_grot.png"></img></p>
+        <h2>Graficzny Rozwiązywacz Tarcz</h2>
         <p>Przedprocesor, solwer i postprocesor dla liniowych obliczeń metodą elementów skończonych modeli w płaskim stanie naprężenia generowanych z map bitowych.</p>
-
         <p class="view"><a href="https://github.com/tutajrobert/grot">Zobacz stronę projektu w GitHub: <code>tutajrobert/grot</code></a></p>
         <p class="view"><a href="mailto:tutajrobert@gmail.com">Skontaktuj się z autorem: <code>tutajrobert@gmail.com</code></a></p>
         <ul>
@@ -27,32 +27,37 @@
         </ul>
       </header>
       <section>
+	  
+	  <p>Menu: <a href="#o-programie">O programie</a> | <a href="#instalacja">Instalacja</a> | <a href="#instrukcja">Instrukcja</a> | <a href="#przyklady">Przykłady</a> | <a href="#teoria">Teoria</a> | <a href="#autor">Autor</a></p>
+	  
         <h3>
 <a id="o-programie" class="anchor" href="#o-programie" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>1. O programie</h3>
 
-<p>Graficzny Rozwiązywacz Tarcz jest domowym programem wykorzystującym metodę elementów skończonych dla liniowych obliczeń wytrzymałościowych w płaskim stanie naprężeń lub odkształceń. Jego unikatową funkcją jest wprowadzenie geometrii modelu obliczeniowego 
-bezpośrednio z obrazka zapisanego jako mapa bitowa, a przygotowanego w dowolnym programie graficznym. Zastosowanym elementem skończonym jest czterowęzłowy kwadrat o liniowych funkcjach kształtu.</p>
+<p>Graficzny Rozwiązywacz Tarcz jest programem wykorzystującym metodę elementów skończonych MES dla liniowych obliczeń wytrzymałościowych w płaskim stanie naprężeń lub odkształceń. Jego unikatową funkcją jest wprowadzenie geometrii modelu obliczeniowego 
+bezpośrednio z obrazka zapisanego jako mapa bitowa, a przygotowanego w dowolnym programie graficznym.</p>
 
 <h3>
+<hr>
 <a id="instalacja" class="anchor" href="#instalacja" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2. Instalacja</h3>
-<p>Graficzny Rozwiązywacz Tarcz wymaga posiadania zainstalowanego <b>pythona w wersji co najmniej 3.5.x</b>. Dodatkowo, niezbędne są następujące biblioteki: numpy, matplotlib oraz PIL.</p>
+<p>Graficzny Rozwiązywacz Tarcz wymaga posiadania zainstalowanego <b>Pythona w wersji co najmniej 3.5</b>. Dodatkowo, niezbędne są następujące biblioteki: numpy, matplotlib oraz PIL.</p>
 <p><b>Dla systemu Windows:</b><br>
-1. Pobierz i zainstaluj pakiet Anaconda pythona 3 z <a href="https://www.continuum.io/downloads">continuum.io</a>, który zawiera niezbędne biblioteki.<br>
-2. Pobierz GRoT korzystając z którejś z paczek archiwów z GitHub i rozpakuj w wybranej lokalizacji.</p>
+1. Pobierz i zainstaluj pakiet Anaconda Pythona 3 z <a href="https://www.continuum.io/downloads">continuum.io</a>, który zawiera wszystkie niezbędne biblioteki.<br>
+2. Pobierz GRoT> korzystając z którejś z paczek archiwów z GitHub i rozpakuj w wybranej lokalizacji.</p>
 
 <p><b>Dla systemu Linux:</b><br>
-1. Zainstaluj niezbędne biblioteki: python3-numpy, python3-matplotlib oraz python3-PIL (lub python3-pillow).<br>
-2. Pobierz GRoT korzystając z którejś z paczek archiwów z GitHub i rozpakuj w wybranej lokalizacji.
+1. Zainstaluj niezbędne biblioteki: python3-numpy, python3-matplotlib oraz python3-pil.<br>
+2. Pobierz GRoT> korzystając z którejś z paczek archiwów z GitHub i rozpakuj w wybranej lokalizacji.
 
 <h3>
+<hr>
 <a id="instrukcja" class="anchor" href="#instrukcja" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>3. Instrukcja</h3>
 <p>Wykonanie analizy obliczeniowej wymaga użycia różnych programów pomocniczych. Przygotowanie geometrii odbywa się w prostym programie graficznym (np. Paint, Tux Paint, mtPaint). Ustawienia analizy i warunki brzegowe opisane są w bardzo krótkim pliku tekstowym, który
-można edytować w dowolnym edytorze tekstu (np. Notatnik, Notepad++). Uruchomienie procedury obliczeniowej wykonywane jest jako pojedyczne polecenie pythona. Rezultatem są pliki graficzne w formacie png zapisane w katalogu projektu.</p>
+można edytować w dowolnym edytorze tekstu (np. Notatnik, Notepad++). Uruchomienie procedury obliczeniowej wykonywane jest jako pojedyczne polecenie Pythona. Rezultatem są pliki graficzne w formacie <code>png</code> zapisane w katalogu projektu.</p>
 
           <p><h4>3.1. Skrócony poradnik jak zacząć</h4>
 Przejdź w konsoli poleceń do katalogu z plikami programu i rozpocznij obliczenia poleceniem:<br><center> <code>python run.py</code> lub <code>python3 run.py</code>.</center></p>
 
-        <p><h4>3.2. Przygotowywanie map bitowych</h4></p><p>Gotowy plik mapy bitowej z modelem obliczeniowym musi znajdować się w folderze <code>images</code> w katalogu programu.</p>
+        <p><h4>3.2. Przygotowywanie map bitowych</h4></p><p><b>Gotowy plik mapy bitowej z modelem obliczeniowym musi znajdować się w folderze <code>projects</code> w katalogu programu.</b></p>
 
       <p>Geometrię wejściową przygotowuję się jako plik graficzny <code>bmp</code>, w którym jeden piksel odpowiada jednemu kwadratowemu elementowi skończonemu. Zastosowanie odpowiednich kolorów umożliwia odczytanie zapisanej mapy bitowej jako modelu obliczeniowego, do którego zostały przypisane odpowiednie warunki brzegowe. Kolory mogą być wybierane dowolnie, zgodnie z instrukcją poniżej. Program jest w stanie rozpoznać zastosowane kolory, dlatego nie jest wymagane użycie odpowiednich barw z określonej palety.<br><br>
 <b>Opis warunków brzegowych / kolorów:</b><br>
@@ -61,28 +66,29 @@ Brak elementów skończonych w tym miejscu, kolor pusty - <font color="BABABA"><
 Utwierdzenia: w kierunku poziomym, pionowym i obu - <font color="red"><b>czerwony</b></font>, <font color = "lime"><b>zielony</b></font>, <font color="blue"><b>granatowy</b></font><br>
     Obciążenie siłą w węzłach elementu (do 3 obciążeń) - <font color="fuchsia"><b>magenta</b></font>, <font color="maroon"><b>brązowy</b></font>, <font color="black"><b>czarny</b></font></p>
       
-<p>Należy pamiętać, że w języku python jedna liczba zmiennoprzecinkowa waży 16 bajtów, przez co model obliczeniowy utowrzony na mapie bitowej 100 x 100 px zajmie niemalże 10 </p>
-<p><h4>3.3. Plik wejściowy</h4></p>
+<p>Należy pamiętać, że w języku Python jedna liczba zmiennoprzecinkowa waży 16 bajtów, przez co model obliczeniowy utworzony na mapie bitowej 100 na 100 pikseli pochłonie prawie 6 GB pamięci RAM. W tym wypadku zalecane jest wykonywanie modeli do 2500 elementów, to jest na mapie bitowej 50 na 50 pikseli.</p>
 
+<p><h4>3.3. Plik wejściowy</h4></p>
+<p>Plik wejściowy ustawień do obliczeń znajduje się w katalogu programu pod nazwą <code>input.txt</code>. W treści pliku umieszczone są komentarze poprzedzone znakiem <code>#</code>, które celnie opisują dane funkcje i polecenia. Edycja tego pliku
+pozwala na nadanie materiału i grubości do modelu, przypisanie warunku brzegowego siły, wskazanie nazwy projektu czy wymaganych wyników do zapisania.</p>
 <h3>
+<hr>
 <a id="przyklady" class="anchor" href="#przyklady" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>4. Przykłady</h3>
 
 <p>Nie ma zatem takiego człowieka, który kocha cierpienie samo w sobie, kto by do niego dążył lub chciał go doświadczyć tylko dlatego, że jest to cierpienie, a dlatego, że czasami zdarzają się takie okoliczności, w których to cierpienie może doprowadzić go do jakiejś wielkiej przyjemności. Dając przykład banalny: któż z nas kiedyś nie podejmował się trudnego wysiłku fizycznego, mając na względzie uzyskanie z tego korzyści?</p>
 
 <h3>
-<a id="teoria" class="anchor" href="#teoria" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>5. Możliwości</h3>
+<hr>
+<a id="teoria" class="anchor" href="#teoria" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>5. Teoria</h3>
 
 <p>Nie ma zatem takiego człowieka, który kocha cierpienie samo w sobie, kto by do niego dążył lub chciał go doświadczyć tylko dlatego, że jest to cierpienie, a dlatego, że czasami zdarzają się takie okoliczności, w których to cierpienie może doprowadzić go do jakiejś wielkiej przyjemności. Dając przykład banalny: któż z nas kiedyś nie podejmował się trudnego wysiłku fizycznego, mając na względzie uzyskanie z tego korzyści?</p>
 
 <h3>
-<a id="teoria" class="anchor" href="#teoria" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>6. Teoria</h3>
+<hr>
+<a id="autor" class="anchor" href="#autor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>6. Autor</h3>
 
-<p>Nie ma zatem takiego człowieka, który kocha cierpienie samo w sobie, kto by do niego dążył lub chciał go doświadczyć tylko dlatego, że jest to cierpienie, a dlatego, że czasami zdarzają się takie okoliczności, w których to cierpienie może doprowadzić go do jakiejś wielkiej przyjemności. Dając przykład banalny: któż z nas kiedyś nie podejmował się trudnego wysiłku fizycznego, mając na względzie uzyskanie z tego korzyści?</p>
-
-<h3>
-<a id="autor" class="anchor" href="#autor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>7. Autor</h3>
-
-<p>Nie ma zatem takiego człowieka, który kocha cierpienie samo w sobie, kto by do niego dążył lub chciał go doświadczyć tylko dlatego, że jest to cierpienie, a dlatego, że czasami zdarzają się takie okoliczności, w których to cierpienie może doprowadzić go do jakiejś wielkiej przyjemności. Dając przykład banalny: któż z nas kiedyś nie podejmował się trudnego wysiłku fizycznego, mając na względzie uzyskanie z tego korzyści?</p>
+<p>Jako pasjonat wszelkich obliczeń inżynierskich jak i hobbystycznych z chęcią porozmawiam z Tobą, drogi Czytelniku tej strony, jeśli masz jakiekolwiek uwagi lub pytania. Na co dzień w pracy zajmuję się obliczeniami MES konstrukcji stalowych i obliczeniami CFD przepływu w zbiornikach, a po
+pracy próbuję się w Pythonie, gdzie zwykle dalej coś liczę. Serdecznie zachęcam do kontaktu: <a href="mailto:tutajrobert@gmail.com">tutajrobert@gmail.com</a>. Życzę bezbłędnych rachunków, by więcej czasu przypadło na rozważania co tak naprawdę liczone było!</p>
 
       </section>  
 	  
