--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
           <li><a href="https://github.com/tutajrobert/grot/tarball/master">Download <strong>TAR</strong></a></li>
           <li><a href="https://github.com/tutajrobert/grot">Zobacz w <strong>GitHub</strong></a></li>
         </ul>
+		<p>Na skróty:<br>
+		A. <a href="graf_instrukcja.pdf">Graficzna instrukcja</a><br>
+		B. <a href="galeria.html">Galeria przykładów</a></p>
       </header>
       <section>
 	  
@@ -59,30 +62,42 @@ Przejdź w konsoli poleceń do katalogu z plikami programu i rozpocznij obliczen
 
         <p><h4>3.2. Przygotowywanie map bitowych</h4></p><p><b>Gotowy plik mapy bitowej z modelem obliczeniowym musi znajdować się w folderze <code>projects</code> w katalogu programu.</b></p>
 
-      <p>Geometrię wejściową przygotowuję się jako plik graficzny <code>bmp</code>, w którym jeden piksel odpowiada jednemu kwadratowemu elementowi skończonemu. Zastosowanie odpowiednich kolorów umożliwia odczytanie zapisanej mapy bitowej jako modelu obliczeniowego, do którego zostały przypisane odpowiednie warunki brzegowe. Kolory mogą być wybierane dowolnie, zgodnie z instrukcją poniżej. Program jest w stanie rozpoznać zastosowane kolory, dlatego nie jest wymagane użycie odpowiednich barw z określonej palety.<br><br>
+      <p>Geometrię wejściową przygotowuję się jako plik graficzny <code>bmp</code>, w którym jeden piksel odpowiada jednemu kwadratowemu elementowi skończonemu. Zastosowanie odpowiednich kolorów umożliwia odczytanie zapisanej mapy bitowej jako modelu obliczeniowego, do którego zostały przypisane odpowiednie warunki brzegowe.<br><br>
 <b>Opis warunków brzegowych / kolorów:</b><br>
-Ciało modelu, elementy skończone - <font color="#35F0F0"><b>akwamaryna</b></font><br>
+Ciało modelu, elementy skończone - <font color="#35F0F0"><b>cyjan lub jasnoniebieski</b></font><br>
 Brak elementów skończonych w tym miejscu, kolor pusty - <font color="BABABA"><b>biały</b></font><br>
 Utwierdzenia: w kierunku poziomym, pionowym i obu - <font color="red"><b>czerwony</b></font>, <font color = "lime"><b>zielony</b></font>, <font color="blue"><b>granatowy</b></font><br>
-    Obciążenie siłą w węzłach elementu (do 3 obciążeń) - <font color="fuchsia"><b>magenta</b></font>, <font color="maroon"><b>brązowy</b></font>, <font color="black"><b>czarny</b></font></p>
+    Obciążenie siłą w węzłach elementu (do 3 obciążeń) - <font color="fuchsia"><b>magenta lub fioletowy</b></font>, <font color="maroon"><b>brązowy</b></font>, <font color="black"><b>czarny</b></font></p>
       
 <p>Należy pamiętać, że w języku Python jedna liczba zmiennoprzecinkowa waży 16 bajtów, przez co model obliczeniowy utworzony na mapie bitowej 100 na 100 pikseli pochłonie prawie 6 GB pamięci RAM. W tym wypadku zalecane jest wykonywanie modeli do 2500 elementów, to jest na mapie bitowej 50 na 50 pikseli.</p>
 
 <p><h4>3.3. Plik wejściowy</h4></p>
 <p>Plik wejściowy ustawień do obliczeń znajduje się w katalogu programu pod nazwą <code>input.txt</code>. W treści pliku umieszczone są komentarze poprzedzone znakiem <code>#</code>, które celnie opisują dane funkcje i polecenia. Edycja tego pliku
-pozwala na nadanie materiału i grubości do modelu, przypisanie warunku brzegowego siły, wskazanie nazwy projektu czy wymaganych wyników do zapisania.</p>
+pozwala na wybranie odpowiednich opcji programu.</p>
 <h3>
 <hr>
 <a id="przyklady" class="anchor" href="#przyklady" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>4. Przykłady</h3>
 
-<p>Nie ma zatem takiego człowieka, który kocha cierpienie samo w sobie, kto by do niego dążył lub chciał go doświadczyć tylko dlatego, że jest to cierpienie, a dlatego, że czasami zdarzają się takie okoliczności, w których to cierpienie może doprowadzić go do jakiejś wielkiej przyjemności. Dając przykład banalny: któż z nas kiedyś nie podejmował się trudnego wysiłku fizycznego, mając na względzie uzyskanie z tego korzyści?</p>
+<p>
+Przykład 0: <a href="struktura.html">Struktura plików</a><br>
+Przykład 1: <a href="przyklad_plyta.html">Płyta z otworem w płaskim stanie naprężeń</a><br>
+Przykład 2: <a href="przyklad_dwuteownik.html">Dwuteownik w płaskim stanie odkształceń</a><br>
+Więcej: <a href="galeria.html">Galeria z przykładami rezultatów analiz</a>
+</p>
 
 <h3>
 <hr>
 <a id="teoria" class="anchor" href="#teoria" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>5. Teoria</h3>
 
-<p>Nie ma zatem takiego człowieka, który kocha cierpienie samo w sobie, kto by do niego dążył lub chciał go doświadczyć tylko dlatego, że jest to cierpienie, a dlatego, że czasami zdarzają się takie okoliczności, w których to cierpienie może doprowadzić go do jakiejś wielkiej przyjemności. Dając przykład banalny: któż z nas kiedyś nie podejmował się trudnego wysiłku fizycznego, mając na względzie uzyskanie z tego korzyści?</p>
-
+<p>
+Możliwości programu przedstawione są poniżej jako krótka lista. Każda decyzja i metoda użyta w programie GRoT> została wybrana z konkretnych powodów. Jeśli drogi Czytelniku jesteś ich ciekawy to zapraszam do <a href="mailto:tutajrobert@gmail.com">kontaktu</a>.</p>
+<p>
+> Rozpoznawanie kolorów bardzo człowiecze dzięki użyciu konwersji koloru RGB do palety Lab <a href="https://en.wikipedia.org/wiki/Lab_color_space">wiki: lab_color_space</a><br>
+> Element skończony tarczowy: kwadrat o czterech węzłych i liniowych funkcjach kształtu wedle <a href="http://wektor.il.pw.edu.pl/~zk/mes/index.html">Rakowski, Kacprzyk, "MES w mech. konstr."</a><br>
+> Użyta mapa kolorów dla wyników to inferno z matplotlib. Całe szczęście, że nie jet lub rainbow! <a href="http://www.paraview.org/ParaView/index.php/Default_Color_Map">paraview: default_color_map</a><br>
+> Przede wszystkim stal, a więc i hipoteza Hubera (Misos i Hanky, przepraszam, nie znam) <a href="https://pl.wikipedia.org/wiki/Maksymilian_Tytus_Huber">wiki: maks_tytus_huber</a><br>
+> Podpisany znakiem Huber (signed Huber), czyli naprężenia Hubera o znaku aksjatora tensora naprężeń (stanu hydrostatycznego)
+</p>
 <h3>
 <hr>
 <a id="autor" class="anchor" href="#autor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>6. Autor</h3>
