--- a/przyklad_plyta.html
+++ b/przyklad_plyta.html
@@ -25,6 +25,9 @@
           <li><a href="https://github.com/tutajrobert/grot/tarball/master">Download <strong>TAR</strong></a></li>
           <li><a href="https://github.com/tutajrobert/grot">Zobacz w <strong>GitHub</strong></a></li>
         </ul>
+		<p>Na skróty:<br>
+		A. <a href="graf_instrukcja.pdf">Graficzna instrukcja</a><br>
+		B. <a href="galeria.html">Galeria przykładów</a></p>
       </header>
       <section>
 	  
