--- a/przyklad_plyta.html
+++ b/przyklad_plyta.html
@@ -17,7 +17,6 @@
       <header>
 	    <p><img src="logo_grot.png"></img></p>
         <h2>Graficzny Rozwiązywacz Tarcz</h2>
-        <p>Przedprocesor, solwer i postprocesor dla liniowych obliczeń metodą elementów skończonych modeli w płaskim stanie naprężenia generowanych z map bitowych.</p>
         <p class="view"><a href="https://github.com/tutajrobert/grot">Zobacz stronę projektu w GitHub: <code>tutajrobert/grot</code></a></p>
         <p class="view"><a href="mailto:tutajrobert@gmail.com">Skontaktuj się z autorem: <code>tutajrobert@gmail.com</code></a></p>
         <ul>
@@ -26,8 +25,7 @@
           <li><a href="https://github.com/tutajrobert/grot">Zobacz w <strong>GitHub</strong></a></li>
         </ul>
 		<p>Na skróty:<br>
-		A. <a href="graf_instrukcja.pdf">Graficzna instrukcja</a><br>
-		B. <a href="galeria.html">Galeria przykładów</a></p>
+		A. <a href="galeria.html">Galeria przykładów</a></p>
       </header>
       <section>
 	  
