--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ bezpośrednio z obrazka zapisanego jako mapa bitowa, a przygotowanego w dowolnym
 <hr>
 <a id="instrukcja" class="anchor" href="#instrukcja" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>3. Instrukcja</h3>
 <p>Wykonanie analizy obliczeniowej wymaga użycia różnych programów pomocniczych. Przygotowanie geometrii odbywa się w prostym programie graficznym (np. Paint, Tux Paint, mtPaint). Ustawienia analizy i warunki brzegowe opisane są w bardzo krótkim pliku tekstowym, który
-można edytować w dowolnym edytorze tekstu (np. Notatnik, Notepad++). Uruchomienie procedury obliczeniowej wykonywane jest jako pojedyczne polecenie Pythona. Rezultatem są pliki graficzne w formacie <code>png</code> zapisane w katalogu projektu.</p>
+można edytować w dowolnym edytorze tekstu (np. Notatnik, Word, Notepad++). Uruchomienie procedury obliczeniowej wykonywane jest jako pojedyczne polecenie Pythona. Rezultatem są pliki graficzne w formacie <code>png</code> zapisane w katalogu projektu.</p>
 
           <p><h4>3.1. Skrócony poradnik jak zacząć</h4>
 Przejdź w konsoli poleceń do katalogu z plikami programu i rozpocznij obliczenia poleceniem:<br><center> <code>python run.py</code> lub <code>python3 run.py</code>.</center></p>
